[#16] project tag enforcement agains controlled vocabulary
