# server/swagger_server/controllers/projects_controller.py
@@ -1,6 +1,7 @@
 import connexion
 import six
 
+from swagger_server.models.api_options import ApiOptions  # noqa: E501
 from swagger_server.models.project_long import ProjectLong  # noqa: E501
 from swagger_server.models.project_short import ProjectShort  # noqa: E501
 from swagger_server import util
@@ -147,14 +148,14 @@ def projects_remove_tags_put(uuid, tags=None):  # noqa: E501
 
 
 def projects_tags_get(search=None):  # noqa: E501
-    """List of valid Project Tags
+    """List of Projects Tag options
 
-    List of valid Project Tags # noqa: E501
+    List of Projects Tag options # noqa: E501
 
     :param search: search term applied
     :type search: str
 
-    :rtype: List[str]
+    :rtype: ApiOptions
     """
     return rc.projects_tags_get(search)
 
