# server/swagger_server/response_code/projects_controller.py
@@ -10,7 +10,7 @@ from .local_controller import get_project_long_by_uuid, add_tags_by_project_uuid
     update_project_by_project_uuid, add_members_by_project_uuid, get_project_short_by_uuid, \
     add_owners_by_project_uuid, remove_members_by_project_uuid, remove_owners_by_project_uuid, project_create, \
     project_delete
-from swagger_server.response_code import PROJECT_TAGS
+from swagger_server.response_code import PROJECTS_TAGS
 
 
 def projects_add_members_put(uuid, project_members=None):  # noqa: E501
@@ -103,27 +103,28 @@ def projects_add_tags_put(uuid, tags=None):  # noqa: E501
         return cors_401()
 
     # ALLOW: facility-operators
-    if not os.getenv('ROLE_FACILITY_OPERATORS') in api_user.roles:
+    if os.getenv('ROLE_FACILITY_OPERATORS') not in api_user.roles:
         return cors_401()
 
-    fab_project = FabricProjects.query.filter_by(uuid=uuid).one_or_none()
-    if fab_project:
-        for tag in tags:
-            if tag not in PROJECT_TAGS:
-                return cors_response(
-                    request=request,
-                    status_code=400,
-                    body="Attempting to add invalid tag '{0}'".format(tag),
-                    x_error='Bad Request'
-                )
-        add_tags_by_project_uuid(project_uuid=uuid, tags=tags)
-    else:
-        return cors_response(
-            request=request,
-            status_code=404,
-            body='Project UUID reference Not Found: {0}'.format(str(uuid)),
-            x_error='Not Found'
-        )
+    if tags:
+        fab_project = FabricProjects.query.filter_by(uuid=uuid).one_or_none()
+        if fab_project:
+            for tag in tags:
+                if tag not in PROJECTS_TAGS.options:
+                    return cors_response(
+                        request=request,
+                        status_code=400,
+                        body="Attempting to add invalid tag '{0}'".format(tag),
+                        x_error='Bad Request'
+                    )
+            add_tags_by_project_uuid(project_uuid=uuid, tags=tags)
+        else:
+            return cors_response(
+                request=request,
+                status_code=404,
+                body='Project UUID reference Not Found: {0}'.format(str(uuid)),
+                x_error='Not Found'
+            )
 
     return get_project_long_by_uuid(uuid)
 
@@ -252,9 +253,9 @@ def projects_tags_get(search=None):  # noqa: E501
     :rtype: List[str]
     """
     if search:
-        response = [tag for tag in PROJECT_TAGS if search.casefold() in tag.casefold()]
+        response = [tag for tag in PROJECTS_TAGS.options if search.casefold() in tag.casefold()]
     else:
-        response = PROJECT_TAGS
+        response = PROJECTS_TAGS.options
 
     return response
 
@@ -349,19 +350,20 @@ def projects_remove_tags_put(uuid, tags=None):  # noqa: E501
         return cors_401()
 
     # ALLOW: facility-operators
-    if not os.getenv('ROLE_FACILITY_OPERATORS') in api_user.roles:
+    if os.getenv('ROLE_FACILITY_OPERATORS') not in api_user.roles:
         return cors_401()
 
-    fab_project = FabricProjects.query.filter_by(uuid=uuid).one_or_none()
-    if fab_project:
-        remove_tags_by_project_uuid(project_uuid=uuid, tags=tags)
-    else:
-        return cors_response(
-            request=request,
-            status_code=404,
-            body='Project UUID reference Not Found: {0}'.format(str(uuid)),
-            x_error='Not Found'
-        )
+    if tags:
+        fab_project = FabricProjects.query.filter_by(uuid=uuid).one_or_none()
+        if fab_project:
+            remove_tags_by_project_uuid(project_uuid=uuid, tags=tags)
+        else:
+            return cors_response(
+                request=request,
+                status_code=404,
+                body='Project UUID reference Not Found: {0}'.format(str(uuid)),
+                x_error='Not Found'
+            )
 
     return get_project_long_by_uuid(uuid)
 
